--- a/config/config.yaml
+++ b/config/config.yaml
@@ -30,4 +30,5 @@ FirstTarget: 'herpesviridae'
 
 Alpha: [0.01,0.05,0.1,0.2,0.4,0.6,0.8] #increments of parameter alpha to use for the grid earch
 Beta: [0,0.05,0.1,0.2,0.4,0.5,0.7,0.9] #range of parameter beta to use for the grid search
+prior: 0.1
 
