corrected readme, changed graph generation to be independent of prior, fixed Warnings thrown by BarPlotResults.py, changed results folder structure

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,6 +2,7 @@
 
 DataDir: 'resources/SampleData/'
 DatabaseDir: 'resources/Databases/'
+ResultsDir: 'results/'
 
 
 #PeptideShaker and SearchGUI directories
@@ -16,19 +17,19 @@ psmFDR: '5'
 
 #sample specific parameters
 
-SpectraFileType: '.mzML' #'.mgf' or '.mzML'
-SampleName: 'PXD005104_Herpessimplex_1'  #needs to be the name of your spectrum file and the folder where you have that file
-HostName: 'human'
+SpectraFileType: '.mgf' #'.mgf' or '.mzML'
+SampleName: 'PXD025130_Sars_CoV_2'  #needs to be the name of your spectrum file and the folder where you have that file
+HostName: 'chlorocebus'
 ReferenceDBName: 'refseq'
 
 
 #PepGM parameters
 TaxaInPlot: 15       #how many taxa should appear in the final results barplot
 TaxaInProteinCount: 15 #how many taxa should appear in the protein counting barplot
-TargetTaxa: '"herpesviridae" "homo sapiens"'
-FirstTarget: 'herpesviridae'
+TargetTaxa: '"coronaviridae" "chlorocebus"'
+FirstTarget: 'coronaviridae'  #will be the name of your json file
 
 Alpha: [0.01,0.05,0.1,0.2,0.4,0.6,0.8] #increments of parameter alpha to use for the grid earch
-Beta: [0,0.05,0.1,0.2,0.4,0.5,0.7,0.9] #range of parameter beta to use for the grid search
-prior: 0.1
+Beta: [0.01,0.05,0.1,0.2,0.4,0.5,0.7,0.9] #range of parameter beta to use for the grid search
+prior: 0.5
 
