--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -14,13 +14,14 @@ include : WorkflowPath + '/snakefiles/searchgui+pepshaker.snakefile'
 
 rule all:
      input:
-          expand(ResultsDir + SampleName + '/Prior' +str(Prior)+'/'+ HostName + '_' + ReferenceDBName +'_PepGM_Results_a{alpha}_b{beta}_p'+str(Prior)+'.png',alpha = AlphaRange, beta = BetaRange)
+          #expand(ResultsDir + SampleName + '/Prior{Prior}/'+ HostName + '_' + ReferenceDBName +'_PepGM_Results_a{alpha}_b{beta}_p{Prior}.png',alpha = AlphaRange, beta = BetaRange, Prior = prior),
+          ResultsDir +SampleName +'/paramcheck.png'
           #DataDirectory + SampleName + '/' + firstTarget +'_proteinCount.png'
 
 
 rule CreateFactorGraph:
      input: ResultsDir +'{samplename}/{hostname}_{DBname}_Default_PSM_Report.txt'
-     output: ResultsDir +'{samplename}/{hostname}_{DBname}_PepGM_graph_p.graphml'
+     output: ResultsDir +'{samplename}/{hostname}_{DBname}_PepGM_graph.graphml'
      conda: 'envs/graphenv.yml'
      params:
           samplename = SampleName,
@@ -28,27 +29,37 @@ rule CreateFactorGraph:
           DBname = ReferenceDBName,
           targetTaxa = TargetTaxa,
           firstTarget = firstTarget
-     shell: 'python3 workflow/scripts/CreatePepGMGraph.py --targetTaxa {params.targetTaxa} --PSM_Report {input} --PeptideMapPath '+DataDirectory+'{params.samplename}/{params.firstTarget}.json --out {output}'
+     log: ResultsDir +'{samplename}/{hostname}_{DBname}.log'
+     shell: 'python3 workflow/scripts/CreatePepGMGraph.py --targetTaxa {params.targetTaxa} --PSM_Report {input} --PeptideMapPath '+DataDirectory+'{params.samplename}/{params.firstTarget}.json --out {output} &>> {log}'
 
 rule RunPepGM:
      input: ResultsDir +'{samplename}/{hostname}_{DBname}_PepGM_graph.graphml'
-     output: ResultsDir +'{samplename}/Prior'+str(Prior)+'/'+'{hostname}_{DBname}_PepGM_Results_a{alpha}_b{beta}_p'+str(Prior)+'.csv'
+     output: ResultsDir +'{samplename}/Prior{Prior}/{hostname}_{DBname}_PepGM_Results_a{alpha}_b{beta}_p{Prior}.csv'
      conda: 'envs/graphenv.yml'
      params:
           samplename = SampleName,
           hostname = HostName,
           DBname = ReferenceDBName,
           targetTaxa = TargetTaxa,
-          firstTarget = firstTarget,
-          prior = Prior
-     shell: 'python3  workflow/scripts/PepGM.py --GraphMLPath {input} --prior {params.prior} --alpha {wildcards.alpha} --beta {wildcards.beta} --out {output}'
+          firstTarget = firstTarget
+     log : ResultsDir + '{samplename}/Prior{Prior}/log/{hostname}_{DBname}__a{alpha}_b{beta}.log'
+     shell: 'python3  workflow/scripts/PepGM.py --GraphMLPath {input} --prior {wildcards.Prior} --alpha {wildcards.alpha} --beta {wildcards.beta} --out {output} &>> {log}'
 
 rule BarPlotResults:
-     input: ResultsDir +'{samplename}/Prior'+str(Prior)+'/'+'{hostname}_{DBname}_PepGM_Results_a{alpha}_b{beta}_p'+str(Prior)+'.csv'
-     output: ResultsDir +'{samplename}/Prior'+str(Prior)+'/'+'{hostname}_{DBname}_PepGM_Results_a{alpha}_b{beta}_p'+str(Prior)+'.png'
+     input: ResultsDir +'{samplename}/Prior{Prior}/'+'{hostname}_{DBname}_PepGM_Results_a{alpha}_b{beta}_p{Prior}.csv'
+     output: ResultsDir +'{samplename}/Prior{Prior}/'+'{hostname}_{DBname}_PepGM_Results_a{alpha}_b{beta}_p{Prior}.png'
      conda: 'envs/graphenv.yml'
      params: NumberofResults = TaxaInPlot
-     shell: 'python3 workflow/scripts/BarPlotResults.py --ResultsFile {input} --NumberofResults {params.NumberofResults} --out {output}'
+     log : ResultsDir + '{samplename}/Prior{Prior}/log/{hostname}_{DBname}__a{alpha}_b{beta}.log'
+     shell: 'python3 workflow/scripts/BarPlotResults.py --ResultsFile {input} --NumberofResults {params.NumberofResults} --out {output} &>> {log}'
+
+rule FindBestParameters:
+     input: 
+          ResultsDir +'{samplename}',
+          expand(ResultsDir + SampleName + '/Prior{Prior}/'+ HostName + '_' + ReferenceDBName +'_PepGM_Results_a{alpha}_b{beta}_p{Prior}.png',alpha = AlphaRange, beta = BetaRange, Prior = prior)
+     output: ResultsDir +'{samplename}/paramcheck.png'
+     conda: 'envs/graphenv.yml'
+     shell: 'python3 workflow/scripts/GridSearchAnalysis.py --resultsfolder {input[0]} --out {output}'
 
 #rules only needed for debugging/checking results
 rule CountProteinsInJson:
