add snakemake rules for createDatabase.py

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,7 +3,7 @@
 DataDir: 'resources/SampleData/'
 DatabaseDir: 'resources/Databases/'
 ResultsDir: 'results/'
-
+ResourcesDir: 'resources/'
 
 
 #PeptideShaker and SearchGUI directories
